--- a/pay-api-ios-sdk/UI/Screens/Web/Web.storyboard
+++ b/pay-api-ios-sdk/UI/Screens/Web/Web.storyboard
@@ -11,7 +11,7 @@
         <!--Web View Controller-->
         <scene sceneID="qcl-xK-ACO">
             <objects>
-                <viewController storyboardIdentifier="WebViewController" id="9CA-74-CFe" customClass="WebViewController" customModule="_billioSDK" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="WebViewController" id="9CA-74-CFe" customClass="WebViewController" customModule="PayApiIosSDK" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Igc-z2-4Qy">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
