--- a/pay-api-ios-sdk/UI/Xibs/BillioPayActionButtonTableViewCell.xib
+++ b/pay-api-ios-sdk/UI/Xibs/BillioPayActionButtonTableViewCell.xib
@@ -2,13 +2,14 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" rowHeight="142" id="VJM-lH-yFu" customClass="BillioPayActionButtonTableViewCell" customModule="_billioSDK" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" rowHeight="142" id="VJM-lH-yFu" customClass="BillioPayActionButtonTableViewCell" customModule="PayApiIosSDK">
             <rect key="frame" x="0.0" y="0.0" width="441" height="66"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="VJM-lH-yFu" id="JCc-Dc-Y7n">
@@ -19,7 +20,7 @@
                         <rect key="frame" x="25" y="15" width="391" height="50"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pjw-hR-z6r" customClass="BorderedButton" customModule="_billioSDK" customModuleProvider="target">
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pjw-hR-z6r" customClass="BorderedButton" customModule="PayApiIosSDK">
                         <rect key="frame" x="25" y="15" width="391" height="50"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -33,9 +34,12 @@
                             <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
                                 <real key="value" value="1"/>
                             </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <real key="value" value="5"/>
+                            </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                         <connections>
-                            <action selector="didTouchActionButton:" destination="VJM-lH-yFu" eventType="touchUpInside" id="kw1-MN-j9g"/>
+                            <action selector="didTouchActionButton:" destination="VJM-lH-yFu" eventType="touchUpInside" id="cgR-Q1-CEr"/>
                         </connections>
                     </button>
                 </subviews>
@@ -52,8 +56,8 @@
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
-                <outlet property="btnAction" destination="Pjw-hR-z6r" id="SC4-7g-oFs"/>
-                <outlet property="vShadow" destination="58p-Jo-jnr" id="Tke-Bm-iAz"/>
+                <outlet property="btnAction" destination="Pjw-hR-z6r" id="jwp-56-i7i"/>
+                <outlet property="vShadow" destination="58p-Jo-jnr" id="zNi-Le-vWJ"/>
             </connections>
             <point key="canvasLocation" x="48.550724637681164" y="79.6875"/>
         </tableViewCell>
