--- a/pay-api-ios-sdk/UI/Xibs/BillioPayCompaniesTableViewCell.xib
+++ b/pay-api-ios-sdk/UI/Xibs/BillioPayCompaniesTableViewCell.xib
@@ -2,13 +2,14 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" rowHeight="195" id="86e-YP-5mC" customClass="BillioPayCompaniesTableViewCell" customModule="_billioSDK" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" rowHeight="195" id="86e-YP-5mC" customClass="BillioPayCompaniesTableViewCell" customModule="PayApiIosSDK">
             <rect key="frame" x="0.0" y="0.0" width="414" height="195"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="86e-YP-5mC" id="1Tk-2l-1f4">
@@ -39,6 +40,11 @@
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <connections>
+                <outlet property="ivMastercard" destination="uJM-U1-NQ3" id="BVb-7S-ByN"/>
+                <outlet property="ivPci" destination="5MU-GG-rsu" id="NYc-qI-nWr"/>
+                <outlet property="ivVisa" destination="C0V-c5-lqh" id="jqq-zr-xWD"/>
+            </connections>
             <point key="canvasLocation" x="-84.057971014492765" y="71.316964285714278"/>
         </tableViewCell>
     </objects>
